--- a/src/search.html
+++ b/src/search.html
@@ -126,15 +126,193 @@
                 </section>
                 <section class="itemList">
                     <div class="l-list">
-                        <div class="l-list-item-3">1</div>
-                        <div class="l-list-item-3">2</div>
-                        <div class="l-list-item-3">3</div>
-                        <div class="l-list-item-3">4</div>
-                        <div class="l-list-item-3">5</div>
-                        <div class="l-list-item-3">6</div>
-                        <div class="l-list-item-3">7</div>
-                        <div class="l-list-item-3">8</div>
-                        <div class="l-list-item-3">9</div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/1.jpg">
+                                <h6 class="card__title"> 將軍觀光漁港</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 將軍區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/2.jpg">
+                                <h6 class="card__title">馬沙溝海洋休閒運動渡假遊樂中心</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 將軍區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/3.jpg">
+                                <h6 class="card__title">蘆竹溝觀光漁港</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 北門區</span>
+                                    <div class="card__detail__like card__detail__like--active"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/4.jpg">
+                                <h6 class="card__title">觀海樓</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 七股區</span>
+                                    <div class="card__detail__like card__detail__like--active"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/5.jpg">
+                                <h6 class="card__title">蚵寮漁港</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 北門區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/6.jpg">
+                                <h6 class="card__title">台灣烏腳病醫療紀念館</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 北門區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/7.jpg">
+                                <h6 class="card__title">北門瀉湖</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 北門區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/6.jpg">
+                                <h6 class="card__title">七股鹽山</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 七股區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/6.jpg">
+                                <h6 class="card__title">龍山寺</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 七股區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/2.jpg">
+                                <h6 class="card__title">馬沙溝海洋休閒運動渡假遊樂中心</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 將軍區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/3.jpg">
+                                <h6 class="card__title">蘆竹溝觀光漁港</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 北門區</span>
+                                    <div class="card__detail__like card__detail__like--active"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/4.jpg">
+                                <h6 class="card__title">觀海樓</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 七股區</span>
+                                    <div class="card__detail__like card__detail__like--active"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/5.jpg">
+                                <h6 class="card__title">蚵寮漁港</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 北門區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/6.jpg">
+                                <h6 class="card__title">台灣烏腳病醫療紀念館</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 北門區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/7.jpg">
+                                <h6 class="card__title">北門瀉湖</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 北門區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/6.jpg">
+                                <h6 class="card__title">七股鹽山</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 七股區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="l-list-item">
+                            <div class="card">
+                                <img class="card__img" src="./img/search/6.jpg">
+                                <h6 class="card__title">龍山寺</h6>
+                                <div class="card__detail">
+                                    <div class="card__detail__icon"></div>
+                                    <span class="card__detail__txt">臺南市 七股區</span>
+                                    <div class="card__detail__like"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </main>
