--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,9 @@
             <div class="subscribe">
                 <div class="l-container">
                     <div class="l-row">
-                        <div class="subscribe__img l-6-12"></div>
+                        <div class="l-6-12">
+                            <div class="subscribe__img"></div>
+                        </div>
                         <div class="l-1-12"></div>
                         <div class="l-5-12">
                             <div class="subscribe__txtWrapper">
