adjust xxl value complete

--- a/src/search.html
+++ b/src/search.html
@@ -106,7 +106,8 @@
                 </div>
             </aside>
             <main class="searchMain">
-                <section class="l-row searchFilter">
+                <section class="searchFilter">
+                    <div class="l-row">
                         <div class="l-6-10">
                             <div class="searchInput">
                                 <div class="searchInput__icon"></div>
@@ -123,6 +124,7 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
                 </section>
                 <section class="itemList">
                     <div class="l-list">
